[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainGame/Maps/Lab/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainGame/MainGameScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainGame/ViewPortControll/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://MainGame/ViewPortControll/2P.gd" type="Script" id=4]
[ext_resource path="res://MainGame/Characters/Players/Player_Stat.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainGame/ViewPortControll/UI.gd" type="Script" id=6]
[ext_resource path="res://MainGame/Addons/UI/Addons_UI.tscn" type="PackedScene" id=7]

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Viewports" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/hseparation = 0
columns = 2

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 320.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 320, 360 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
current = true
smoothing_enabled = true
script = ExtResource( 3 )

[node name="MainGameScene" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 2 )]

[node name="ParallaxBackground" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="Viewports/ViewportContainer1"]
follow_viewport_enable = true
script = ExtResource( 6 )

[node name="1" parent="Viewports/ViewportContainer1/UI" instance=ExtResource( 5 )]

[node name="Addon_UI" parent="Viewports/ViewportContainer1/UI" instance=ExtResource( 7 )]
visible = false
offset = Vector2( 35, 105 )
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 35, 105 )

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 320, 360 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
current = true
smoothing_enabled = true
script = ExtResource( 3 )

[node name="ParallaxBackground" parent="Viewports/ViewportContainer2/Viewport2" instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="Viewports/ViewportContainer2"]
script = ExtResource( 6 )

[node name="2" parent="Viewports/ViewportContainer2/UI" instance=ExtResource( 5 )]
offset = Vector2( 320, 0 )
transform = Transform2D( 1, 0, 0, 1, 320, 0 )

[node name="Addon_UI" parent="Viewports/ViewportContainer2/UI" instance=ExtResource( 7 )]
visible = false
offset = Vector2( 355, 105 )
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 355, 105 )
